# simple_movement_detector

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp  optical_flow.hpp
